<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_marginTop="50dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/clean_backgrounds">
    <ImageButton
        android:id="@+id/user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/account"
        android:contentDescription="@string/user" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            tools:targetApi="o" />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress"
                android:importantForAutofill="no"
                tools:targetApi="o" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/verify_email"
            android:background="@drawable/button_complete" />
    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Address"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            tools:targetApi="o" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/update"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_cart"
        android:text="@string/update"/>
    <Button
        android:id="@+id/reset"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_back"
        android:text="@string/reset_password" />
    <Button
        android:id="@+id/delete"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_warning"
        android:text="@string/delete_my_account" />
</LinearLayout>