<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="210dp">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            >

            <RelativeLayout
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/english"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:text="@string/service" />
                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/service"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:text="@string/quantity" />
                <TextView
                    android:id="@+id/price"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/quantity"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:text="@string/price" />
                <ImageButton
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/button_warning"
                    android:src="@android:drawable/ic_menu_delete"
                    android:contentDescription="@string/delete" />
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>