<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6a1b9a"
    android:padding="10dp"
    tools:context=".SplashScreenActivity">
    <ImageView
        android:id="@+id/icon"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/icon"
        app:srcCompat="@mipmap/laundrylogo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/developer"
        android:layout_centerHorizontal="true"
        android:text="@string/organization"
        android:textColor="#fff"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/developer"
        android:textSize="19sp"
        android:gravity="center"
        android:textColor="#ffffff"/>
</RelativeLayout>