<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutActivity"
    android:padding="10dp"
    android:background="@drawable/clean_backgrounds">
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Total Amount:"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/amount"
        android:layout_below="@id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="#000000" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:id="@+id/layout1"
        android:layout_below="@+id/layout2"
        >
        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:hint="@string/address"
            android:textSize="20sp"
            android:importantForAutofill="no"
            tools:targetApi="o" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout2"
        android:layout_centerInParent="true"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:layout_width="249dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:hint="@string/date"
                android:textSize="20sp"
                android:importantForAutofill="no"
                tools:targetApi="o" />


        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/getDate"
            android:text="Get Date"/>
    </LinearLayout>
    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_back"
        android:textColor="#ffff"
        android:layout_alignParentBottom="true"
        android:text="@string/confirm" />
</RelativeLayout>