<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp">
                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/img"
                    android:layout_marginLeft="160dp"
                    android:src="@mipmap/laundrylogo"
                    />
                <TextView
                    android:id="@+id/english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:gravity="center"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:layout_below="@+id/img"/>

                <EditText
                    android:id="@+id/quantity"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/english"
                    android:hint="@string/quantity_unit"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:layout_marginTop="25dp"/>
                <Spinner
                    android:id="@+id/typeof_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbarSize="32dp"
                    android:layout_below="@id/english"
                    android:layout_marginTop="25dp"
                    android:layout_alignEnd="@id/english">
                </Spinner>
                <Button
                    android:id="@+id/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/typeof_service"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/button_cart"
                    android:padding="10dp"
                    android:text="@string/add_to_cart"
                    android:textColor="#fff"
                    android:layout_marginTop="40dp"/>
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>